--- a/index.html
+++ b/index.html
@@ -100,38 +100,38 @@
       <div class="horizontal-scroll top">
         <!-- Figma Designs -->
         <a href="https://figma.com" target="_blank" class="project-card">
-          <img src="/Assets/f1.png" alt="Figma Project">
+          <img src="Assets/f1.png" alt="Figma Project">
           <p>Figma Design 1</p>
         </a>
         <a href="#" target="_blank" class="project-card">
-          <img src="/Assets/f2.png" alt="Figma Project">
+          <img src="Assets/f2.png" alt="Figma Project">
           <p>Figma Design 2</p>
         </a>
         <a href="https://figma.com" target="_blank" class="project-card">
-            <img src="/Assets/f1.png" alt="Figma Project">
+            <img src="Assets/f1.png" alt="Figma Project">
             <p>Figma Design 1</p>
         </a>
         <a href="#" target="_blank" class="project-card">
-          <img src="/Assets/f2.png" alt="Figma Project">
+          <img src="Assets/f2.png" alt="Figma Project">
           <p>Figma Design 2</p>
         </a>
       </div>
       <div class="horizontal-scroll bottom">
         <!-- Website Templates -->
         <a href="https://dibyanshu502.github.io/Weather-forecasting-WebApp/" target="_blank" class="project-card">
-          <img src="/Assets/p1Full.png" alt="Website Project">
+          <img src="Assets/p1Full.png" alt="Website Project">
           <p>Weather-Forecasting WebApp</p>
         </a>
         <a href="https://dibyanshu502.github.io/Admin_Dashboard/" target="_blank" class="project-card">
-          <img src="/Assets/p2.png" alt="Website Project">
+          <img src="Assets/p2.png" alt="Website Project">
           <p>Admin Dashboard</p>
         </a>
         <a href="https://github.com/Dibyanshu502/Tab_Tracker" target="_blank" class="project-card">
-          <img src="/Assets/p3.png" alt="Website Project">
+          <img src="Assets/p3.png" alt="Website Project">
           <p>Chrome Extension</p>
         </a>
         <a href="https://dibyanshu502.github.io/Admin_Dashboard/" target="_blank" class="project-card">
-          <img src="/Assets/p2black.png" alt="Website Project">
+          <img src="Assets/p2black.png" alt="Website Project">
           <p>E-Commerce Site</p>
         </a>
       </div>
