--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <nav class="navbar">
       <div class="logo">MyPortfolio</div>
+      <button class="menu-toggle" aria-label="Open navigation">&#9776;</button>
       <ul class="nav-links">
         <li><a href="#home">Home</a></li>
         <li><a href="#About Me">About Me</a></li>
