--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h1 id="intro-text"></h1>
         <p id="sub-text"></p>
         <div class="hero-buttons hidden">
-          <a href="/Assets/Resume.pdf" download="Dibyanshu_Resume.pdf" class="resume-btn" target="_blank">Download Resume</a>
+          <a href="Assets/Resume.pdf" download="Dibyanshu_Resume.pdf" class="resume-btn" target="_blank">Download Resume</a>
           <div class="social-links">
             <a href="https://www.linkedin.com/in/dibyanshu-kumar-35b338231" target="_blank">LinkedIn</a>
             <a href="https://github.com/Dibyanshu502" target="_blank">GitHub</a>
