updated reponsivness for Mobile devices
Added the menu toggle option

--- a/index.html
+++ b/index.html
@@ -11,7 +11,23 @@
 
 </head>
 <body>
-    <nav class="navbar">
+  <header class="navbar">
+    <a href="#" class="logo">MyPortfolio</a>
+    <div class="nav-container">
+      <nav class="nav-links">
+        <a href="#home">Home</a>
+        <a href="#About Me">About</a>
+        <a href="#projects">Projects</a>
+        <a href="#contact">Contact</a>
+      </nav>
+      <div class="hamburger" id="hamburger">
+        <span></span><span></span><span></span>
+      </div>
+    </div>
+  </header>
+
+
+    <!-- <nav class="navbar">
       <div class="logo">MyPortfolio</div>
       <ul class="nav-links">
         <li><a href="#home">Home</a></li>
@@ -19,7 +35,7 @@
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
-    </nav>
+    </nav> -->
   
     <!-- Hero Section -->
     <section id="home" class="hero">
@@ -36,7 +52,7 @@
         <h1 id="intro-text"></h1>
         <p id="sub-text"></p>
         <div class="hero-buttons hidden">
-          <a href="/Assets/Resume.pdf" download="Dibyanshu_Resume.pdf" class="resume-btn" target="_blank">Download Resume</a>
+          <a href="Assets/Resume.pdf" download="Dibyanshu_Resume.pdf" class="resume-btn" target="_blank">Download Resume</a>
           <div class="social-links">
             <a href="https://www.linkedin.com/in/dibyanshu-kumar-35b338231" target="_blank">LinkedIn</a>
             <a href="https://github.com/Dibyanshu502" target="_blank">GitHub</a>
@@ -77,7 +93,7 @@
 
         <div class="timeline-item">
           <i class="fa-solid fa-school timeline-icon"></i>
-          <h3 class="timeline-title">Matriculation <span>(2009–2019)</span></h3>
+          <h3 class="timeline-title">Matriculation <span>(2018–2019)</span></h3>
           <p class="timeline-desc">
             Graduated from St. Xavier International School. Excelled in academics and extracurriculars.
             <p>Percentage: 93.6%</p>
@@ -100,38 +116,38 @@
       <div class="horizontal-scroll top">
         <!-- Figma Designs -->
         <a href="https://figma.com" target="_blank" class="project-card">
-          <img src="/Assets/f1.png" alt="Figma Project">
+          <img src="Assets/f1.png" alt="Figma Project">
           <p>Figma Design 1</p>
         </a>
         <a href="#" target="_blank" class="project-card">
-          <img src="/Assets/f2.png" alt="Figma Project">
+          <img src="Assets/f2.png" alt="Figma Project">
           <p>Figma Design 2</p>
         </a>
         <a href="https://figma.com" target="_blank" class="project-card">
-            <img src="/Assets/f1.png" alt="Figma Project">
+            <img src="Assets/f1.png" alt="Figma Project">
             <p>Figma Design 1</p>
         </a>
         <a href="#" target="_blank" class="project-card">
-          <img src="/Assets/f2.png" alt="Figma Project">
+          <img src="Assets/f2.png" alt="Figma Project">
           <p>Figma Design 2</p>
         </a>
       </div>
       <div class="horizontal-scroll bottom">
         <!-- Website Templates -->
         <a href="https://dibyanshu502.github.io/Weather-forecasting-WebApp/" target="_blank" class="project-card">
-          <img src="/Assets/p1Full.png" alt="Website Project">
+          <img src="Assets/p1Full.png" alt="Website Project">
           <p>Weather-Forecasting WebApp</p>
         </a>
         <a href="https://dibyanshu502.github.io/Admin_Dashboard/" target="_blank" class="project-card">
-          <img src="/Assets/p2.png" alt="Website Project">
+          <img src="Assets/p2.png" alt="Website Project">
           <p>Admin Dashboard</p>
         </a>
         <a href="https://github.com/Dibyanshu502/Tab_Tracker" target="_blank" class="project-card">
-          <img src="/Assets/p3.png" alt="Website Project">
+          <img src="Assets/p3.png" alt="Website Project">
           <p>Chrome Extension</p>
         </a>
         <a href="https://dibyanshu502.github.io/Admin_Dashboard/" target="_blank" class="project-card">
-          <img src="/Assets/p2black.png" alt="Website Project">
+          <img src="Assets/p2black.png" alt="Website Project">
           <p>E-Commerce Site</p>
         </a>
       </div>
